force-app/main/default/objects/Training_Register__c/Training_Register__c.object-meta.xml
<CustomObject>
    <description>Capture assigned, In Progress and Completed training for all staff</description>
    <label>Training Register</label>
    <nameField>
        <label>Training Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Register</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>