force-app/main/default/objects/Training_Register__c/fields/CPD__c.field-meta.xml
<CustomField>
    <fullName>CPD__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this training contribute towards Continuing Professional Development Points?</inlineHelpText>
    <label>CPD</label>
    <type>Checkbox</type>
</CustomField>