force-app/main/default/objects/Training_Register__c/fields/External_Presenter_Platform__c.field-meta.xml
<CustomField>
    <fullName>External_Presenter_Platform__c</fullName>
    <inlineHelpText>Who presented this training (Enter individual/company name)? Or was it on an online training platform (enter platform name E.g. Trailhead)?</inlineHelpText>
    <label>External Presenter/Platform</label>
    <length>100</length>
    <type>Text</type>
</CustomField>