force-app/main/default/objects/Training_Register__c/fields/Internal_presenter__c.field-meta.xml
<CustomField>
    <fullName>Internal_presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which staff member provided this training?</inlineHelpText>
    <label>Internal Presenter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notEqual</operation>
            <value>Orde Customer Community Login User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Register</relationshipName>
    <type>Lookup</type>
</CustomField>