force-app/main/default/objects/Training_Register__c/fields/Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Minutes__c</fullName>
    <inlineHelpText>How much time did you spend training?</inlineHelpText>
    <label>Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>