force-app/main/default/objects/Training_Register__c/fields/Training_Link__c.field-meta.xml
<CustomField>
    <fullName>Training_Link__c</fullName>
    <inlineHelpText>If training is online, please provide link to website/training module.</inlineHelpText>
    <label>Training Link</label>
    <type>Url</type>
</CustomField>