force-app/main/default/objects/Training_Register__c/recordTypes/External_Training.recordType-meta.xml
<RecordType>
    <fullName>External_Training</fullName>
    <active>true</active>
    <description>Training Conducted Externally or Online</description>
    <label>External Training</label>
</RecordType>