force-app/main/default/objects/Training_Register__c/recordTypes/Internal_Training.recordType-meta.xml
<RecordType>
    <fullName>Internal_Training</fullName>
    <active>true</active>
    <description>Training Conducted Internally</description>
    <label>Internal Training</label>
</RecordType>