force-app/main/default/objects/Training_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>Department__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Internal_presenter__c</columns>
    <columns>External_Presenter_Platform__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Time_Minutes__c</columns>
    <columns>CPD__c</columns>
    <columns>Date_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>