force-app/main/default/objects/Training_Register__c/listViews/Assigned_Training.listView-meta.xml
<ListView>
    <fullName>Assigned_Training</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_Complete__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Internal_presenter__c</columns>
    <columns>External_Presenter_Platform__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Assigned,In Progress</value>
    </filters>
    <label>Assigned Training</label>
</ListView>