force-app/main/default/objects/Training_Register__c/listViews/My_Complete_Training.listView-meta.xml
<ListView>
    <fullName>My_Complete_Training</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Department__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>External_Presenter_Platform__c</columns>
    <columns>Internal_presenter__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Complete__c</columns>
    <columns>Time_Minutes__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Training</label>
</ListView>